FDG-7109 fix z-index for dropdown

--- a/src/zIndex.module.scss
+++ b/src/zIndex.module.scss
@@ -35,17 +35,17 @@ $dtg-api-error: $dtg-table-loading-icon;
 // table container
 $table-loading-section: $above + $backdrop;
 $table-title: $above + $table-loading-section;
-$table-loading-icon: $above + $table-title; // test loading icon ?? *******
+$table-loading-icon: $above + $table-title; 
 $dynamic-config-edit-pivot: $above + $backdrop;
 $pivot-options-form-first-child: $above + $dynamic-config-edit-pivot;
 // filter download
-$filter-download-left-content: $above + $backdrop;
+$filter-download-left-content: $above + $table-loading-icon; // parent of select-control dropdown
 // published reports
 $published-reports-preview: $above + $backdrop;
 $published-reports-left-content: $above + $published-reports-preview;
 $published-reports-year-select: $above + $published-reports-left-content;
 // api quick guide
-$dataset-details-example-loading-icon: $above + $backdrop; // example request and response loading icon --- test loading icon ?? ******
+$dataset-details-example-loading-icon: $above + $backdrop; // example request and response loading icon
 // nav
 $dataset-detail-nav: $above + $published-reports-year-select; // published-reports-year-select is the highest in DDP, z-index:3
 
@@ -57,11 +57,11 @@ $main-sticky-footer: $above + $download-sticky-footer;
 // global
 $radio-button: $above + $backdrop;
 $toc-button: $above + $illustration-whiteout; // $illustration-whiteout is highest on explainer
-$select-control: $above + $backdrop;
+$select-control: $above + $table-loading-icon;
 
 // menu
 $menu-dropdown: $above + $backdrop; 
-$mobile-menu: $above + $main-sticky-footer; // main-sticky-footer is highest on site ... $mobile-menu is now z-index: 6
+$mobile-menu: $above + $main-sticky-footer; // main-sticky-footer was highest on site before ... $mobile-menu is now z-index: 6
 $mobile-menu-overlay: $below + $backdrop;
 
 // glossary
